--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "description": "Simple REST API engine for PHP",
   "keywords": ["engine","rest","api"],
   "license": "MIT",
+  "version": "1.0.0",
   "require": {
     "php": ">=7.2.0"
   }
