--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,10 @@
   "version": "1.0.0",
   "require": {
     "php": ">=7.2.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Amper": "core"
+    }
   }
 }
